fix: fix button font size on mobile view (375px)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -335,6 +335,14 @@
         }
       }
     }
+
+    @media (max-width: 374.98px) {
+      &__button {
+        &--left, &--right {
+          font-size: 12px;
+        }
+      }
+    }
   }
 }
 
